# fredEco

./: CHANGELOG.rst  README.rst  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
docs/: .readthedocs.yaml  examples.ipynb  requirements.txt
docs/source/: conf.py  examples.ipynb  fredeco.rst  index.rst
fredeco/: fredData.py  fredKey.py  fredSearch.py
tests/: test_data.py  test_search.py
